--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     ]
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start",
     "mikro-orm": "node --require ts-node/register node_modules/.bin/mikro-orm"
@@ -19,7 +19,7 @@
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@mikro-orm/cli": "^4.0.7",
     "@mikro-orm/core": "^4.0.7",
-    "@mikro-orm/mysql": "^4.0.7",
+    "@mikro-orm/postgresql": "^4.0.7",
     "@types/node": "^14.11.2",
     "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "dotenv": "^8.2.0",
